Updating homepage in package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://AwakeManish.github.io/Portfolio",
+  "homepage": "https://awakemanish.com/",
   "name": "Portfolio",
   "version": "0.1.0",
   "private": true,
